--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -252,6 +252,23 @@ bblink a:hover {
         padding-left: 10px;
 }
 
+.catrow_noalb {
+        background: #E6E6E6 ;
+        color : #000000;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
+.catrow {
+        background: #FFFFFF ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
 .tableb_compact {
         background: #FFFFFF ;
         padding-top: 2px;
