--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -194,6 +194,23 @@ bblink a:hover {
         padding-left: 10px;
 }
 
+.catrow_noalb {
+        background: #CBD7DE ;
+        color : #000000;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
+.catrow {
+        background: #F2F5F7 ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
 .tableb_compact {
         background: #F2F5F7 ;
         padding-top: 2px;
