--- a/devel/themes/fruity/style.css
+++ b/devel/themes/fruity/style.css
@@ -447,6 +447,14 @@ td #admin_menu_anim {
         margin-bottom: 30px;
 }
 
+.display_media {
+        background: #F7F37B ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
+}
+
 .thumbnails {
         background: #E7F38C ;
         padding: 5px;
