--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -252,6 +252,22 @@ bblink a:hover {
         padding-left: 10px;
 }
 
+.tableb_compact {
+        background: #FFFFFF ;
+        padding-top: 2px;
+        padding-right: 5px;
+        padding-bottom: 2px;
+        padding-left: 5px;
+}
+
+.tablef {
+        background: #E6E6E6 ;
+        padding-top: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+}
+
 .catrow_noalb {
         background: #E6E6E6 ;
         color : #000000;
@@ -266,22 +282,6 @@ bblink a:hover {
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
-        padding-left: 10px;
-}
-
-.tableb_compact {
-        background: #FFFFFF ;
-        padding-top: 2px;
-        padding-right: 5px;
-        padding-bottom: 2px;
-        padding-left: 5px;
-}
-
-.tablef {
-        background: #E6E6E6 ;
-        padding-top: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
         padding-left: 10px;
 }
 
@@ -483,6 +483,14 @@ td #admin_menu_anim {
         background-color: #FFFFFF;
         margin-top: 30px;
         margin-bottom: 30px;
+}
+
+.display_media {
+        background: #FFFFFF ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
 }
 
 .thumbnails {
