--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -194,6 +194,22 @@ bblink a:hover {
         padding-left: 10px;
 }
 
+.tableb_compact {
+        background: #F2F5F7 ;
+        padding-top: 2px;
+        padding-right: 5px;
+        padding-bottom: 2px;
+        padding-left: 5px;
+}
+
+.tablef {
+        background: #CBD7DE ;
+        padding-top: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
+        padding-left: 10px;
+}
+
 .catrow_noalb {
         background: #CBD7DE ;
         color : #000000;
@@ -208,22 +224,6 @@ bblink a:hover {
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
-        padding-left: 10px;
-}
-
-.tableb_compact {
-        background: #F2F5F7 ;
-        padding-top: 2px;
-        padding-right: 5px;
-        padding-bottom: 2px;
-        padding-left: 5px;
-}
-
-.tablef {
-        background: #CBD7DE ;
-        padding-top: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
         padding-left: 10px;
 }
 
@@ -429,6 +429,14 @@ td #admin_menu_anim {
         background-color: #FFFFFF;
         margin-top: 30px;
         margin-bottom: 30px;
+}
+
+.display_media {
+        background: #F2F5F7 ;
+        padding-top: 3px;
+        padding-right: 10px;
+        padding-bottom: 3px;
+        padding-left: 10px;
 }
 
 .thumbnails {
