changed theme docs from using php to static html for offline use
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2175 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/docs/theme/style.css
+++ b/devel/docs/theme/style.css
@@ -116,3 +116,9 @@ li h5 {
 	border-left: solid gray 2px;
 	border-right: solid gray 1px;
 }
+
+#footer {
+	border-top: 1px solid gray;
+	margin-top: 30px;
+	padding-top: 10px;
+}
