added gallery name and description to all themes
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2232 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/hardwired/style.css
+++ b/devel/themes/hardwired/style.css
@@ -585,6 +585,12 @@ td #admin_menu_anim {
         font-size:20px;
 }
 
+.gal_description
+{
+        color:#4C5157;
+        font-size:10px;
+}
+
 .debug_text {
         border: #BDBEBD;
         background-color: #EFEFEF;
