changed h1 so that it is visible
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@2356 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/eyeball/style.css
+++ b/devel/themes/eyeball/style.css
@@ -116,7 +116,7 @@ h1{
         font-size: 24px;
         font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
         text-decoration: none;
-        color: #000000;
+        color: #EEEEEE;
         margin: 0px;
 }
 
