--- a/devel/themes/project_vii/style.css
+++ b/devel/themes/project_vii/style.css
@@ -16,6 +16,24 @@
   $Date$
 **********************************************/
 
+/* Colors used:                                */
+/* --------------------------------------------*/
+/* #000000 = RBG   0,  0,  0 = (black)         */
+/* #333333 = RBG  51, 51, 51 = (dark grey)     */
+/* #5F5F5F = RBG  95, 95, 95 = (dark grey)     */
+/* #666666 = RBG 102,102,102 = (medium grey)   */
+/* #999999 = RBG 153,153,153 = (medium grey)   */
+/* #FAFAFA = RBG 250,250,250 = (light grey)    */
+/* #BDBDBD = RBG 189,190,189 = (light grey)    */
+/* #BDBEBD = RBG 189,190,189 = (light grey)    */
+/* #E6E6E6 = RBG 230,230,230 = (dark white)    */
+/* #EFEFEF = RBG 239,239,239 = (dark white)    */
+/* #FFFFFF = RBG 255,255,255 = (white)         */
+/* #87CFED = RBG 135,207,237 = (cyan)          */
+/* #FF6600 = RBG 255,102,  0 = (orange)        */
+/* if you don't like a color, just do a search */
+/* and replace on the hex color...             */
+
 body {
         background-color: #FAFAFA;
         font-family: "Trebuchet MS", Verdana, Geneva, Arial, sans-serif;
@@ -120,7 +138,7 @@ li {
         background-position : right;
         background-repeat : no-repeat;
         text-decoration: none;
-        color:         #000000;
+        color:#000000;
 }
 
 .top_menu_bttn a {
