--- a/devel/docs/style.css
+++ b/devel/docs/style.css
@@ -1,3 +1,21 @@
+/*************************
+  Coppermine Photo Gallery
+  ************************
+  Copyright (c) 2003-2005 Coppermine Dev Team
+  v1.1 originally written by Gregory DEMAR
+
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or
+  (at your option) any later version.
+  ********************************************
+  Coppermine version: 1.4.2
+  $Source$
+  $Revision$
+  $Author$
+  $Date$
+**********************************************/
+
 body {
         font-size: .9em;
         background: #F7F7F7;
